--- a/RWorkspace/WaterAccounts.Rmd
+++ b/RWorkspace/WaterAccounts.Rmd
@@ -1,16 +1,29 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Water Acounting"
+author: "John Fay"
+date: "Summer 2017"
+output:
+  html_document: default
+  html_notebook: default
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+Step 1: Load the data from the USGS Water Use site
 
 ```{r}
-plot(cars)
+library('readr')
+theURL <- 'http://water.usgs.gov/watuse/data/2010/usco2010.txt'
+theURL <- 'usco2010.txt'
+#theData = read_tsv(theURL,na=c("NA","N/A"))
+#df <- read.table(theURL)
+#df <- read_tsv(theFile,na=c("","NA","N/A"))
+df <- read.table(theURL,sep = '\t', header=T)
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+```{r}
+library('tibble')
+View(theData)
+```
+
