--- a/RWorkspace/WaterAccounts.Rmd
+++ b/RWorkspace/WaterAccounts.Rmd
@@ -10,20 +10,8 @@ output:
 Step 1: Load the data from the USGS Water Use site
 
 ```{r}
-library('readr')
+library('data.table')
 theURL <- 'http://water.usgs.gov/watuse/data/2010/usco2010.txt'
-theURL <- 'usco2010.txt'
-#theData = read_tsv(theURL,na=c("NA","N/A"))
-#df <- read.table(theURL)
-#df <- read_tsv(theFile,na=c("","NA","N/A"))
-df <- read.table(theURL,sep = '\t', header=T)
-```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-```{r}
-library('tibble')
-View(theData)
-```
-
+df = fread(theURL, sep='\t')
+df = as.data.frame(df)
+class(df)
