--- a/RWorkspace/WaterAccountsv0.Rmd
+++ b/RWorkspace/WaterAccountsv0.Rmd
@@ -54,7 +54,7 @@ fipsTbl <- read.csv("https://raw.githubusercontent.com/ljwolf/cenpy/master/cenpy
   select(one_of(c("FIPS.Code","stateName")))
 
 #Data table
-dataTbl = tbl_df(df[0:7])
+dataTbl = tbl_df(df[0:10])
 
 
 #Join state names
@@ -77,21 +77,11 @@ allData <- left_join(states,useTbl,c("region" = "stateName"))
 ```{r}
 #https://gist.github.com/cdesante/4252133
 p <- ggplot()
-p <- p + geom_polygon(data=allData, aes(x=long, y=lat, group = group, fill=allData$TP-TotPop),colour="white"
+p <- p + geom_polygon(data=allData, aes(x=long, y=lat, group = group, fill=allData$`TP-TotPop`),colour="white"
       ) + scale_fill_continuous(low = "thistle2", high = "darkred", guide="colorbar")
-P1 <- p + theme_bw()  + labs(fill = "Black to White Incarceration Rates \n Weighted by Relative Population" 
-                            ,title = "State Incarceration Rates by Race, 2010", x="", y="")
+P1 <- p + theme_bw()  + labs(fill = "legend" 
+                            ,title = "Title, 2010", x="", y="")
 P1 + scale_y_continuous(breaks=c()) + scale_x_continuous(breaks=c()) + theme(panel.border = element_blank())
 ```
 
-
-## Make map data frames
-```{r}
-usMap <- ggplot(data = allData) + 
-  geom_polygon(aes(x = long, y = lat, fill = "COUNTYFIPS"), color = "white") + 
-  coord_fixed(1.3) +
-  guides(fill=FALSE) 
-
-usMap #+ scale_fill_gradient(trans = "log10")
-```
 
